<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting" >

    <PreferenceCategory
        android:key="profile_category" >

        <Preference
            android:title="@string/personal_info"
            android:icon="@drawable/ic_user" >
        </Preference>

        <SwitchPreference
            android:key="profile_check"
            android:title="@string/profile_check"
            android:icon="@drawable/ic_secured"
            android:summary="@string/profile_check_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="manager" >

        <Preference
            android:title="@string/check_update"
            android:icon="@drawable/ic_time">

        </Preference>

        <SwitchPreference
            android:key="auto_update"
            android:title="@string/auto_update"
            android:icon="@drawable/ic_refresh" />

        <Preference
            android:title="@string/permission_manager"
            android:icon="@drawable/ic_lock_off" >

        </Preference>

        <Preference
            android:title="@string/reminder_manager"
            android:icon="@drawable/ic_notification" >

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="other" >

        <Preference
            android:title="@string/personalization"
            android:icon="@drawable/ic_tips"
            >

        </Preference>

        <Preference
            android:title="@string/focus"
            android:icon="@drawable/ic_hourglass">

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>