<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FocusActivity">

    <TextView
        android:id="@+id/focus_title"
        android:text="@string/focus"
        android:textSize="36sp"
        android:textColor="@color/text_deep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/focus_content"
        android:text="@string/focus_content"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/focus_title"
        app:layout_constraintTop_toBottomOf="@id/focus_title" />

    <EditText
        android:id="@+id/input_time_hour"
        android:layout_width="184dp"
        android:layout_height="68dp"
        android:autofillHints=""
        android:hint="0"
        android:inputType="number"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/input_time_minute"
        app:layout_constraintTop_toBottomOf="@id/focus_content"/>

    <EditText
        android:id="@+id/input_time_minute"
        android:layout_width="184dp"
        android:layout_height="68dp"
        android:textAlignment="center"
        android:hint="0"
        android:inputType="number"
        android:textSize="25sp"
        android:autofillHints=""
        app:layout_constraintStart_toEndOf="@id/input_time_hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_time_hour"
        app:layout_constraintBottom_toBottomOf="@id/input_time_hour" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="92sp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/focus_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>



    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="onClickStart"
        android:backgroundTint="@color/blue_label_bg_deep"
        android:text="@string/start"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/time_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stop_button"
        android:visibility="gone"/>

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/blue_label_bg_deep"
        android:onClick="onClickStop"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/start_button"
        app:layout_constraintTop_toTopOf="@id/start_button"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"/>

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/yes"
        android:backgroundTint="@color/blue_label_bg_deep"
        app:layout_constraintTop_toBottomOf="@id/input_time_hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_label_bg_deep"
        android:onClick="onClickExit"
        app:layout_constraintTop_toTopOf="@+id/start_button"
        app:layout_constraintRight_toRightOf="@+id/start_button"
        app:layout_constraintLeft_toLeftOf="@+id/start_button"
        app:layout_constraintBottom_toBottomOf="@+id/start_button"
        android:text="@string/exit"
        android:visibility="gone"/>
    <Button
        android:id="@+id/cont_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_label_bg_deep"
        android:onClick="onClickCont"
        app:layout_constraintTop_toTopOf="@+id/stop_button"
        app:layout_constraintRight_toRightOf="@+id/stop_button"
        app:layout_constraintLeft_toLeftOf="@+id/stop_button"
        app:layout_constraintBottom_toBottomOf="@+id/stop_button"
        android:text="@string/cont"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>