<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_event"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue_label_bg_deep"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/close_add_event_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_close"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_event"
                android:textColor="@color/text_deep"
                android:textSize="24sp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/close_add_event_btn"
                app:layout_constraintTop_toTopOf="@id/close_add_event_btn"
                app:layout_constraintBottom_toBottomOf="@id/close_add_event_btn" />

            <Button
                android:id="@+id/add_task_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="16sp"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/close_add_event_btn"
                app:layout_constraintBottom_toBottomOf="@id/close_add_event_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textColor="@color/normal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/title_hint"
                android:maxLength="15"
                android:inputType="text"
                android:autofillHints="name"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text" />



            <androidx.cardview.widget.CardView
                android:id="@+id/date_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="20sp"
                        android:textColor="@color/normal"
                        android:layout_marginStart="28dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <com.edu.ustc.ustcschedule.editText.DateEditText
                        android:id="@+id/date_day_text"
                        android:textColor="@color/text_deep"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/date_text"
                        app:layout_constraintBottom_toBottomOf="@id/date_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/start_time_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"

                app:layout_constraintTop_toBottomOf="@id/date_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/start_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_start"
                        android:textSize="20sp"
                        android:textColor="@color/normal"
                        android:layout_marginStart="28dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <com.edu.ustc.ustcschedule.editText.TimeEditText
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/text_deep"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintTop_toTopOf="@id/start_time_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/start_time_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/end_time_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@id/start_time_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/end_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_end"
                        android:textSize="20sp"
                        android:textColor="@color/normal"
                        android:layout_marginStart="28dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <com.edu.ustc.ustcschedule.editText.TimeEditText
                        android:id="@+id/end_time"
                        android:textColor="@color/text_deep"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/end_time_text"
                        app:layout_constraintBottom_toBottomOf="@id/end_time_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/importance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importance"
                android:textSize="20sp"
                android:textColor="@color/normal"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/end_time_card"
                app:layout_constraintStart_toStartOf="@id/title_text" />

            <Spinner
                android:id="@+id/importance_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/importance_array_name"
                android:theme="@style/TypeSpinner"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@id/importance_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/importance_text" />

            <TextView
                android:id="@+id/is_repeat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_repeat"
                android:textSize="20sp"
                android:textColor="@color/normal"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/importance_text"
                app:layout_constraintTop_toBottomOf="@+id/importance_spinner" />

            <Spinner
                android:id="@+id/edit_is_repeat"
                android:entries="@array/yes_or_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:theme="@style/TypeSpinner"
                app:layout_constraintTop_toTopOf="@+id/is_repeat_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/is_repeat_text" />

            <TextView
                android:id="@+id/period_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textSize="20sp"
                android:textColor="@color/normal"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/is_repeat_text"
                app:layout_constraintTop_toBottomOf="@+id/is_repeat_text" />

            <Spinner
                android:id="@+id/edit_period"
                android:entries="@array/period_array_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:theme="@style/TypeSpinner"
                app:layout_constraintTop_toTopOf="@+id/period_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/period_text" />




            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:textColor="@color/normal"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/period_text"
                app:layout_constraintStart_toStartOf="@id/title_text" />


            <EditText
                android:id="@+id/teacher_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/description_hint"
                android:maxLength="100"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/description_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/place_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textSize="20sp"
                android:textColor="@color/normal"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/teacher_edit"
                app:layout_constraintStart_toStartOf="@id/title_text" />


            <EditText
                android:id="@+id/place_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/place_hint"
                android:maxLength="10"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/place_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>